--- a/main.css
+++ b/main.css
@@ -1,151 +1,272 @@
-content {
+*{
 
-background-color: lightgreen;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 
 }
 
 body {
+
   margin: 0;
   font-family: Arial;
-        
-}
- 
-.topnav {
-
-  background-color: black;
-  overflow: hidden;
-}
-    
-.topnav a:hover{
-  background-color: lightyellow;
-  color: black;
-    
 }
 
-.topnav a {
-  
-  text-align: right;
-  color: white;
-  padding: 10px;
-  font-style: ariel;
-  font-size: 18px;
-  text-decoration: none;
-}
- 
-.wrapper {
-  display: table;
-  width:100%
-  
-}
-  
-.col-12 {
-  
-  width: 100%;
-}    
+.center {
 
-body {
-  margin: 0;
-  font-family: Arial;
-      
-}
-  
-header {
-  
-  text-align: left;
-  background-color: black;
-  
-}
-
-
-img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-a {
-
-  display: inline-block;
-  list-style-type: none;
-}
-
-input {
-  
-  float: right;
-}
-
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
+  width: 50%; 
   background-color: black;
-  color: white;
+  
+}
+
+img.center {
+
   text-align: center;
+  margin: 0 auto;
+  padding: 0px;
+
+}
+
+.festival-info img{
+   
+  float: left;
+  padding: 15px;
+
+}
+
+.wrapper img {
+  
+  float: center;
+  
+
 }
 
 h1 {
 
-  font-size: 30px;
-  font-family: Arial;
   text-align: center;
-  background-color: white;
-    
-
+  font-family: arial;
+  padding: 15px;
 }
 
-h3 {
-  font-family: Arial;
+h2 {
+  
   text-align: center;
-  background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 20px; 
+ 
+} 
+
+h3 {
+  
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 20px;
+
 }
 
 h4 {
-  font-family: Arial;
+
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 25px;
+  padding: 15px;
+
+}
+
+p {
+
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 5px;
+  font-size: 20px;
+
+}
+
+.row {
+
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0 4px;
+
+}
+
+.colum {
+
+  -ms-flex: 25%;
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+
+}
+
+.colum img {
+
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+  
+
+}
+
+.topnav {
+  width: 100%;
+  background-color: black;
+  overflow: auto;
+}
+
+.topnav a {
+  float: left;
+  padding: 15px;
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+  width: 16.6%;
+  text-align: center;
+}
+
+.topnav a:hover {
+  background-color: teal;
+}
+
+table, td, th {
+  border: 1px solid black;
+  text-align: center; 
+  padding: 10px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th {
+  height: 50px;
+  
+}
+
+.shows {
+  
+  font-family: arial;
+  border-collapse: collapse;
+  width: 100%;
+
+}
+
+.shows td, #shows th {
+  
+  border: 1px solid white;
+  padding: 20px;
+  text-align: center;
+}
+
+#shows tr:nth-child(even){
+  
   background-color: white;
 }
- 
-.row {
-  display: -ms- flexbox;
-  display: flex;
-  -ms- flex-wrap: wrap;
-  flex-wrap:wrap;
-  padding: 3px;
- 
+
+#shows tr:hover {
+  
+  background-color: silver;
 }
 
-.column {
-float: left;
-width: 40%;
-padding: 10px;
-}
-
-.column img {
-margin-top: 12px;
-}
-
-@media only screen and (max-width:1800px) {
-  .topnav, .header, .content {
-    width: 100%;
-  }
-} 
-
-input {
-    
-  float: right;
-}
-
-a {
+#shows th {
+  
+  padding-top: 15x;
+  padding-bottom: 15px;
   text-align: center;
+  background-color: grey;
+  color: white;
+} 
+
+.web-links img {
+
+  padding: 20px;
+  float: left;
+
+} 
+
+.slideshow {
+
+  max-width: 1400px;
+  position: relative;
+  margin: auto;
+  background-color: #F6E8B1;
+  
+}
+
+
+.web-image {
+
+  vertical-align: middle;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  margin: 0 2px;
+  background-color: black;
+  border-radius: 80%;
   display: inline-block;
-  list-style-type: none;
+  transition: background-color 0.8s ease;
+}
+
+.fade {
+
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 4s;
+  animation-name: fade;
+  animation-duration: 4s;
+
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .9} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .9} 
+  to {opacity: 1}
 } 
-   
-fieldset {
-  background-color: lightyellow;
-   
-} 
+
+input[type=text], select, textarea {
+
+  width:100%;
+  padding: 15px;
+  border: 1px solid silver;
+  box-sizing: border-box;
+  margin-top: 8px;
+  margin-bottom: 20px;
+  resize: vertical;
+
+}
+
+input[type=submit] {
+
+  background-color: darkgoldenrod;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+input[type=submit]:hover {
+
+  background-color: grey;
+}
+
+.contact-form {
+
+  border-radius: 8px;
+  background-color: white;
+  padding: 25px;
+}
 
 .fa {
   padding: 20px;
@@ -175,16 +296,25 @@ fieldset {
   color: white;
 } 
 
-@media screen and (max-width: 1800px) {.column { 
-      -ms-flex: 50%;
-      flex: 50%;
-      max-width: 50%;
-      }
+@media screen and (max-width: 500px) {
+  .topnav a, .colum , .text{
+    float: none;
+    display: block;
+    width: 100%;
+    text-align: center;
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
+    font-size: 15px;
+  }
 }
-  
-@media screen and (max-width: 600px) {.column { 
-      -ms-flex: 100%;
-      flex: 100%;
-      max-width: 100%;
-      }
+
+@media screen and (max-width: 1400px) {
+  .column , .text {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+    text-align: center;
+    font-size: 10px;
+  }
 }
